Update and rename profile.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ltwikrの部屋</title>
+    <title>ltwikrのProfile</title>
     <link rel="stylesheet" href="profile-stylesheet.css">
   </head>
   <body>
